After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702195 - playbin: Emit {audio,text,video}-changed signals when pads are removed
playbin: Emit {audio,text,video}-changed signals when pads are removed
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-13 17:11 UTC by Brendan Long
Modified: 2013-06-14 12:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Emit *-type signals in pad_removed_cb (2.19 KB, patch)
2013-06-13 17:11 UTC, Brendan Long
committed Details | Review

Description Brendan Long 2013-06-13 17:11:26 UTC
Created attachment 246746 [details] [review]
Emit *-type signals in pad_removed_cb

Playbin only emits it's *-changed signals when pads are added. I assume we should also emit it when pads are removed.

This caused problems for me in WebKit because we were holding onto pads after their input-selectors were deleted.
Comment 1 Brendan Long 2013-06-13 17:15:12 UTC
The switch is duplicated in both pieces of code, but I can't decide if it would be worthwhile to have a `get_changed_signal(GstPlaySinkType)` function.
Comment 2 Sebastian Dröge (slomo) 2013-06-14 12:28:03 UTC
commit b5f7a621bbbe6d5f5152083e71e77518c0991b4a
Author: Brendan Long <b.long@cablelabs.com>
Date:   Thu Jun 13 11:08:20 2013 -0600

    playbin: Emit {audio,text,video}-changed signals when pads are removed
    
    https://bugzilla.gnome.org/show_bug.cgi?id=702195